--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="description" content="VAP合宿（3/2~3/3）のしおりです">
         <title>合宿のしおり</title>
         <link rel="stylesheet" href="index.css">
     </head>
