--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         </header>
         <h1>3/2~3/3 合宿のしおり</h1>
-        <p id="LastUpdate">最終更新:1/31</p>
+        <p id="LastUpdate">最終更新:2/1</p>
         <h3>スケジュール</h3>
         <b id="date">3/2</b>
         <table class="ScheduleTable">
@@ -60,7 +60,7 @@
 
         <h3><a name="group">班割り</a></h3>
         <p>未定</p>
-        <p class="silver">買い出し班やってくれる人連絡ください</p>
+        <p class="silver">買い出し班手伝ってくれる人連絡ください</p>
 
         <h3>周辺施設</h3>
         <div class="links">
@@ -91,13 +91,14 @@
             <li>宿はコテージ二棟とペンション一部屋取りました。</li>
                 <ul><li>コテージを宴会用と退避用、ペンションを女性部屋にすると思いますが詳細には行ってから決めます。</li></ul>
             <li>二日目の運転手は流動的になるかもしれません。</li>
+            <li>雪滑りたい人います？色々課題があるような気はしますが声があれば検討します。</li>
             <li>要望・質問等は粉川まで</li>
         </ul>
 
         <hr>
         <div class="notes">
         <a name="note1" href="#ret1">*1</a> 体育館の予約は12:00~18:00で広めに取っているため、そんなにキッチリ時間守らなくて良いです。<br>
-        <a name="note2" href="#ret2">*2</a> コテージにもお風呂ついてます。洗濯機はなさそう。<br>
+        <a name="note2" href="#ret2">*2</a> コテージにも一応お風呂ついてます。洗濯機はなさそう。<br>
         <a name="note3" href="#ret3">*3</a> 10:00~13:00で予約。 <br>
         <a name="note4" href="#ret4">*4</a> トランプとかジェンガとか何でも。外でキャッチボールとかフリスビーとかも出来るかもしれません。
         </div>
