接種証明について追記

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                     </ul>
                 </li>
                 <li>遊び道具<a href="#note4" name="ret4" class="note">*4</a>があると何かの役に立つかもしれません。</li>
+                <li>ワクチン接種証明か陰性証明がある人は<font color="red">必ず</font>持参してください。</li>
             </ul>
             <li>宿はコテージ二棟とペンション一部屋取りました。</li>
                 <ul><li>コテージを宴会用と退避用、ペンションを女性部屋にすると思いますが詳細には行ってから決めます。</li></ul>
