下見を踏まえて修正

--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
 
         </header>
         <h1>3/2~3/3 合宿のしおり</h1>
-        <p id="LastUpdate">最終更新:2/1</p>
+        <p id="LastUpdate">最終更新:2/5</p>
         <h3>スケジュール</h3>
         <b id="date">3/2</b>
         <table class="ScheduleTable">
             <tr class="data">
-                <td>10:00</td>
+                <td>9:30</td>
                 <td>集合（場所未定）</td>
             </tr>
             <tr>
-                <td>10:00~13:00</td>
+                <td>~13:30</td>
                 <td>移動（車）&道中で<a href="#group">班</a>ごとに昼食</td>
             </tr>
             <tr>
-                <td>13:00~17:00</td>
+                <td>~16:30頃</td>
                 <td><a href="http://www3.omn.ne.jp/~tecno-c/center/custom.html">体育館</a>でバレー <a href="#note1" name="ret1" class="note">*1</a></td>
             </tr>
             <tr>
-                <td>17:00~19:00頃</td>
+                <td>~19:00頃</td>
                 <td>温泉やランドリー等寄りつつ<a href="http://www.yamataro21.com/">コテージ</a>へ <a href="#note2" name="ret2" class="note">*2</a></td>
             </tr>
             <tr>
@@ -45,7 +45,7 @@
                 <td>チェックアウト＆<a href="http://www3.omn.ne.jp/~tecno-c/center/custom.html">体育館</a>へ移動</td>
             </tr>
             <tr>
-                <td>10:00~12:00頃</td>
+                <td>~12:00頃</td>
                 <td>バレー <a href="#note3" name="ret3" class="note">*3</a></td>
             </tr>
             <tr>
@@ -68,9 +68,10 @@
         <a href="http://www3.omn.ne.jp/~tecno-c/center/custom.html">八幡原体育館</a><br>
         <a href="http://www.yamataro21.com/">ペンション&コテージ 山太郎</a><br>
         <a href="https://sakuranbo.info/sagae/strawberry/farm/">ストロベリーファーム</a><br>
-        <a href="http://yozan.gokurakuyu.jp/">極楽湯 鷹山の湯</a><br>
-        <a href="https://heiannoyu.com/index.html">米沢温泉 平安の湯</a><br>
-        <a href="https://tamanoyu.club/">おいたま温泉 賜の湯</a><br>
+        <a href="https://onogawa.jp/">小野川温泉</a>（温泉街。旅行感ある）<br>
+        <a href="http://yozan.gokurakuyu.jp/">極楽湯 鷹山の湯</a>（よくあるスーパー銭湯）<br>
+        <a href="https://heiannoyu.com/index.html">米沢温泉 平安の湯</a>（よくある銭湯その1）<br>
+        <a href="https://tamanoyu.club/">おいたま温泉 賜の湯</a>（よくある銭湯その2）<br>
         <a href="https://goo.gl/maps/8sTbkQHBQjE7uq817">キムラ 桑山店</a>（コテージから一番近いスーパー）<br>
         <a href="https://goo.gl/maps/4oi5bPNvvAGfFaHC9">ふわっとcaraf</a>（コテージから一番近いランドリー）<br>
         </div>
@@ -88,12 +89,17 @@
                     </ul>
                 </li>
                 <li>遊び道具<a href="#note4" name="ret4" class="note">*4</a>があると何かの役に立つかもしれません。</li>
-                <li>ワクチン接種証明か陰性証明がある人は<font color="red">必ず</font>持参してください。</li>
+                <li>ワクチン接種証明か陰性証明がある人は<font color="red"><b>必ず</b></font>持参してください。</li>
             </ul>
             <li>宿はコテージ二棟とペンション一部屋取りました。</li>
-                <ul><li>コテージを宴会用と退避用、ペンションを女性部屋にすると思いますが詳細には行ってから決めます。</li></ul>
+                <ul>
+                    <li>コテージを宴会用と退避用、ペンションを女性部屋にすると思いますが詳細には行ってから決めます。</li>
+                    <li><b><u>運転手へ</u></b> 冬季は雪で道が消えています（ので、ナビがあてになりません）。
+                    米沢スキー場の駐車場に停めて、そこからスノーモービルで運んでくれるそうです。<a href="http://www.yamataro21.com/acces1.htm">詳細</a></li>
+                </ul>
             <li>二日目の運転手は流動的になるかもしれません。</li>
             <li>雪滑りたい人います？色々課題があるような気はしますが声があれば検討します。</li>
+            <li>宴会の持ち込み企画大歓迎です。アイデアだけでも</li>
             <li>要望・質問等は粉川まで</li>
         </ul>
 
