--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
                 <td>バレー <a href="#note3" name="ret3" class="note">*3</a></td>
             </tr>
             <tr>
+                <td>&nbsp;&nbsp;&nbsp;~</td>
+                <td>移動</td>
+            </tr>
+            <tr>
                 <td>13:30頃？</td>
                 <td><a href="https://sakuranbo.info/sagae/strawberry/farm/">いちご狩り</a></td>
             </tr>
