表の見え方を修正

--- a/index.html
+++ b/index.html
@@ -17,47 +17,47 @@
         <h3>スケジュール</h3>
         <b id="date">3/2</b>
         <table class="ScheduleTable">
-            <tr class="data">
-                <td>9:30</td>
+            <tr>
+                <td id="time">9:30</td>
                 <td>集合（場所未定）</td>
             </tr>
             <tr>
-                <td>~13:30</td>
+                <td id="time">~13:30</td>
                 <td>移動（車）&道中で<a href="#group">班</a>ごとに昼食</td>
             </tr>
             <tr>
-                <td>~16:30頃</td>
+                <td id="time">~16:30頃</td>
                 <td><a href="http://www3.omn.ne.jp/~tecno-c/center/custom.html">体育館</a>でバレー <a href="#note1" name="ret1" class="note">*1</a></td>
             </tr>
             <tr>
-                <td>~19:00頃</td>
+                <td id="time">~19:00頃</td>
                 <td>温泉やランドリー等寄りつつ<a href="http://www.yamataro21.com/">コテージ</a>へ <a href="#note2" name="ret2" class="note">*2</a></td>
             </tr>
             <tr>
-                <td>19:00~</td>
+                <td id="time">19:00~</td>
                 <td>BBQ & 宴会</td>
             </tr>
         </table>
         <b id="date">3/3</b>
         <table class="ScheduleTable">
             <tr>
-                <td>10:00</td>
+                <td id="time">10:00</td>
                 <td>チェックアウト＆<a href="http://www3.omn.ne.jp/~tecno-c/center/custom.html">体育館</a>へ移動</td>
             </tr>
             <tr>
-                <td>~12:00頃</td>
+                <td id="time">~12:00頃</td>
                 <td>バレー <a href="#note3" name="ret3" class="note">*3</a></td>
             </tr>
             <tr>
-                <td>&nbsp;&nbsp;&nbsp;~</td>
+                <td id="time">&nbsp;&nbsp;&nbsp;~</td>
                 <td>移動</td>
             </tr>
             <tr>
-                <td>13:30頃？</td>
+                <td id="time">13:30頃</td>
                 <td><a href="https://sakuranbo.info/sagae/strawberry/farm/">いちご狩り</a></td>
             </tr>
             <tr>
-                <td>終わり次第</td>
+                <td id="time">終わり次第</td>
                 <td>仙台へ帰る</td>
             </tr>
         </table>
