リダイレクトするページにした

--- a/index.html
+++ b/index.html
@@ -1,119 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="description" content="VAP合宿（3/2~3/3）のしおりです">
-        <meta property="og:description" content="VAP合宿（3/2~3/3）のしおりです">
-        <title>合宿のしおり</title>
-        <link rel="stylesheet" href="index.css">
-    </head>
+<head>
+<title>移転しました</title>
+<meta http-equiv="refresh" content="5;url=https://konakawa-r.com/handbook20230302.html">
+</head>
 
-    <body>
-        <header>
+<body>
+このページは移転しました。
+5秒後に<a href="https://konakawa-r.com/handbook20230302.html">新しいURL</a>へリダイレクトされます。
+</body>
 
-        </header>
-        <h1>3/2~3/3 合宿のしおり</h1>
-        <p id="LastUpdate">最終更新:2/5</p>
-        <h3>スケジュール</h3>
-        <b id="date">3/2</b>
-        <table class="ScheduleTable">
-            <tr>
-                <td id="time">9:30</td>
-                <td>集合（場所未定）</td>
-            </tr>
-            <tr>
-                <td id="time">~13:30</td>
-                <td>移動（車）&道中で<a href="#group">班</a>ごとに昼食</td>
-            </tr>
-            <tr>
-                <td id="time">~16:30頃</td>
-                <td><a href="http://www3.omn.ne.jp/~tecno-c/center/custom.html">体育館</a>でバレー <a href="#note1" name="ret1" class="note">*1</a></td>
-            </tr>
-            <tr>
-                <td id="time">~19:00頃</td>
-                <td>温泉やランドリー等寄りつつ<a href="http://www.yamataro21.com/">コテージ</a>へ <a href="#note2" name="ret2" class="note">*2</a></td>
-            </tr>
-            <tr>
-                <td id="time">19:00~</td>
-                <td>BBQ & 宴会</td>
-            </tr>
-        </table>
-        <b id="date">3/3</b>
-        <table class="ScheduleTable">
-            <tr>
-                <td id="time">10:00</td>
-                <td>チェックアウト＆<a href="http://www3.omn.ne.jp/~tecno-c/center/custom.html">体育館</a>へ移動</td>
-            </tr>
-            <tr>
-                <td id="time">~12:00頃</td>
-                <td>バレー <a href="#note3" name="ret3" class="note">*3</a></td>
-            </tr>
-            <tr>
-                <td id="time">&nbsp;&nbsp;&nbsp;~</td>
-                <td>移動</td>
-            </tr>
-            <tr>
-                <td id="time">13:30頃</td>
-                <td><a href="https://sakuranbo.info/sagae/strawberry/farm/">いちご狩り</a></td>
-            </tr>
-            <tr>
-                <td id="time">終わり次第</td>
-                <td>仙台へ帰る</td>
-            </tr>
-        </table>
-        <br>
-
-        <h3><a name="group">班割り</a></h3>
-        <p>未定</p>
-        <p class="silver">買い出し班手伝ってくれる人連絡ください</p>
-
-        <h3>周辺施設</h3>
-        <div class="links">
-        <a href="http://www3.omn.ne.jp/~tecno-c/center/custom.html">八幡原体育館</a><br>
-        <a href="http://www.yamataro21.com/">ペンション&コテージ 山太郎</a><br>
-        <a href="https://sakuranbo.info/sagae/strawberry/farm/">ストロベリーファーム</a><br>
-        <a href="https://onogawa.jp/">小野川温泉</a>（温泉街。旅行感ある）<br>
-        <a href="http://yozan.gokurakuyu.jp/">極楽湯 鷹山の湯</a>（よくあるスーパー銭湯）<br>
-        <a href="https://heiannoyu.com/index.html">米沢温泉 平安の湯</a>（よくある銭湯その1）<br>
-        <a href="https://tamanoyu.club/">おいたま温泉 賜の湯</a>（よくある銭湯その2）<br>
-        <a href="https://goo.gl/maps/8sTbkQHBQjE7uq817">キムラ 桑山店</a>（コテージから一番近いスーパー）<br>
-        <a href="https://goo.gl/maps/4oi5bPNvvAGfFaHC9">ふわっとcaraf</a>（コテージから一番近いランドリー）<br>
-        </div>
-
-        <h3>その他備考</h3>
-        <ul>
-            <li><b>持ち物</b>は<u>二日分の服</u>と<u>お金</u>はマストです。</li>
-            <ul>
-                <li>運動着などは1日目にランドリーで洗濯する手もあります。</li>
-                <li>予算は15000円です。
-                    <ul>
-                        <li>出発前に13000円回収します。</li>
-                        <li>1日目の昼食代・風呂代・ランドリー代は別なので残りの2000円で各自やりくりしてください。</li>
-                        <li>不安な人やお土産を買いたい人は多めに持ってくると良いです。</li>
-                    </ul>
-                </li>
-                <li>遊び道具<a href="#note4" name="ret4" class="note">*4</a>があると何かの役に立つかもしれません。</li>
-                <li>ワクチン接種証明か陰性証明がある人は<font color="red"><b>必ず</b></font>持参してください。</li>
-            </ul>
-            <li>宿はコテージ二棟とペンション一部屋取りました。</li>
-                <ul>
-                    <li>コテージを宴会用と退避用、ペンションを女性部屋にすると思いますが詳細には行ってから決めます。</li>
-                    <li><b><u>運転手へ</u></b> 冬季は雪で道が消えています（ので、ナビがあてになりません）。
-                    米沢スキー場の駐車場に停めて、そこからスノーモービルで運んでくれるそうです。<a href="http://www.yamataro21.com/acces1.htm">詳細</a></li>
-                </ul>
-            <li>二日目の運転手は流動的になるかもしれません。</li>
-            <li>雪滑りたい人います？色々課題があるような気はしますが声があれば検討します。</li>
-            <li>宴会の持ち込み企画大歓迎です。アイデアだけでも</li>
-            <li>要望・質問等は粉川まで</li>
-        </ul>
-
-        <hr>
-        <div class="notes">
-        <a name="note1" href="#ret1">*1</a> 体育館の予約は12:00~18:00で広めに取っているため、そんなにキッチリ時間守らなくて良いです。<br>
-        <a name="note2" href="#ret2">*2</a> コテージにも一応お風呂ついてます。洗濯機はなさそう。<br>
-        <a name="note3" href="#ret3">*3</a> 10:00~13:00で予約。 <br>
-        <a name="note4" href="#ret4">*4</a> トランプとかジェンガとか何でも。外でキャッチボールとかフリスビーとかも出来るかもしれません。
-        </div>
-        <br><br>
-    </body>
 </html>
